# career-agent-mcp

./: .gitignore  README.md  pyproject.toml
job_agent_mcp/: __main__.py  config.py  server.py
job_agent_mcp/prompts/: job_agent.py
job_agent_mcp/tools/: notion.py  remember.py
job_agent_mcp/web/: app.py
job_agent_mcp/web/templates/: index.html
