[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "career-agent-mcp"
version = "0.1.0"
description = "Job search & application assistant MCP server with Notion CV integration and web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "notion-client>=2.2.1",
    "flask>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.scripts]
job-agent-mcp = "job_agent_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["job_agent_mcp"]
